DO NOT USE, WIP[launcher]: begin VM launch refactor